--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.89MB/s(Youtube:不良林), server: 38.68.134.71, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇯🇵 日本-2.31MB/s(Youtube:不良林), server: jp02-vm0.entry.ikuuu.casa, port: 448, type: vmess, uuid: 811ccaad-9a0c-3363-85fe-6ff4a686f58b, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: jp02-vm0.entry.ikuuu.casa}}
-  - {name: 🇺🇸 美国-1.66MB/s(Youtube:不良林), server: 5.181.234.254, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇩🇪 德国-2.33MB/s(Youtube:不良林), server: 5.183.179.141, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇳🇱 荷兰-1.65MB/s(Youtube:不良林), server: 213.183.51.172, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
-  - {name: 🇺🇸 美国-2.89MB/s(Youtube:不良林) 2, server: 169.197.142.39, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇳🇱 荷兰-1.75MB/s(Youtube:不良林), server: 213.183.59.218, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇷🇺 俄罗斯联邦-150.4KB/s(Youtube:不良林), server: 213.183.53.202, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇺🇸 美国-3.33MB/s(Youtube:不良林), server: 38.68.134.71, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇷🇺 俄罗斯联邦-269.7KB/s(Youtube:不良林), server: 213.183.53.202, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇩🇪 德国-2.17MB/s(Youtube:不良林), server: 5.183.179.141, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇺🇸 美国-3.24MB/s(Youtube:不良林), server: 169.197.142.39, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-3.19MB/s(Youtube:不良林), server: 169.197.142.39, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇺🇸 美国-2.02MB/s(Youtube:不良林), server: 169.197.142.39, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: 169.197.142.39, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-150.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-269.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-150.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-269.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-150.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-269.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-150.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-269.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-150.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-269.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-150.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-269.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-150.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-269.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
