--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-1.75MB/s(Youtube:不良林), server: 213.183.59.218, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇷🇺 俄罗斯联邦-150.4KB/s(Youtube:不良林), server: 213.183.53.202, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇺🇸 美国-3.33MB/s(Youtube:不良林), server: 38.68.134.71, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇷🇺 俄罗斯联邦-269.7KB/s(Youtube:不良林), server: 213.183.53.202, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇩🇪 德国-2.17MB/s(Youtube:不良林), server: 5.183.179.141, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: 38.68.135.19, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇩🇪 德国-2.07MB/s(Youtube:不良林), server: 5.183.179.141, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
+  - {name: 🇩🇪 德国-2.31MB/s(Youtube:不良林), server: 5.183.179.141, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇩🇪 德国-3.47MB/s(Youtube:不良林), server: 5.183.179.141, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
+  - {name: 🇺🇸 美国-2.76MB/s(Youtube:不良林), server: 38.68.134.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-3.24MB/s(Youtube:不良林), server: 169.197.142.39, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-3.19MB/s(Youtube:不良林), server: 169.197.142.39, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇺🇸 美国-2.02MB/s(Youtube:不良林), server: 169.197.142.39, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-150.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-269.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-150.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-269.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-150.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-269.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-150.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-269.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-150.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-269.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-150.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-269.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-150.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-269.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.07MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
