--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: 38.68.135.19, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇩🇪 德国-2.07MB/s(Youtube:不良林), server: 5.183.179.141, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
-  - {name: 🇩🇪 德国-2.31MB/s(Youtube:不良林), server: 5.183.179.141, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇩🇪 德国-3.47MB/s(Youtube:不良林), server: 5.183.179.141, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
-  - {name: 🇺🇸 美国-2.76MB/s(Youtube:不良林), server: 38.68.134.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇳🇱 荷兰-1020.9KB/s(Youtube:不良林), server: 213.183.51.172, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇷🇺 (已存活1天)俄罗斯联邦-810.3KB/s(Youtube:不良林), server: 213.183.53.207, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
+  - {name: 🇺🇸 美国-579.4KB/s(Youtube:不良林), server: 38.68.135.19, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 波兰-1007.6KB/s(Youtube:不良林), server: 217.30.10.67, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇷🇺 俄罗斯联邦-186.8KB/s(Youtube:不良林), server: 213.183.53.177, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇺🇸 美国-3.00MB/s(Youtube:不良林), server: 169.197.142.39, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-3.24MB/s(Youtube:不良林), server: 169.197.142.39, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-3.19MB/s(Youtube:不良林), server: 169.197.142.39, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-2.02MB/s(Youtube:不良林), server: 169.197.142.39, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: 169.197.142.39, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-247.5KB/s(Youtube:不良林), server: 169.197.142.39, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-3.07MB/s(Youtube:不良林), server: 169.197.142.39, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.07MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1020.9KB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-810.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-579.4KB/s(Youtube:不良林)
+      - 波兰-1007.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-186.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-247.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.07MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1020.9KB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-810.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-579.4KB/s(Youtube:不良林)
+      - 波兰-1007.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-186.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-247.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.07MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1020.9KB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-810.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-579.4KB/s(Youtube:不良林)
+      - 波兰-1007.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-186.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-247.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.07MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1020.9KB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-810.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-579.4KB/s(Youtube:不良林)
+      - 波兰-1007.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-186.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-247.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.07MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1020.9KB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-810.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-579.4KB/s(Youtube:不良林)
+      - 波兰-1007.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-186.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-247.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.07MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1020.9KB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-810.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-579.4KB/s(Youtube:不良林)
+      - 波兰-1007.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-186.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-247.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.07MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1020.9KB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-810.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-579.4KB/s(Youtube:不良林)
+      - 波兰-1007.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-186.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-247.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
