--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-1020.9KB/s(Youtube:不良林), server: 213.183.51.172, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇷🇺 (已存活1天)俄罗斯联邦-810.3KB/s(Youtube:不良林), server: 213.183.53.207, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
-  - {name: 🇺🇸 美国-579.4KB/s(Youtube:不良林), server: 38.68.135.19, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 波兰-1007.6KB/s(Youtube:不良林), server: 217.30.10.67, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇷🇺 俄罗斯联邦-186.8KB/s(Youtube:不良林), server: 213.183.53.177, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇳🇱 荷兰-1.62MB/s(Youtube:不良林), server: 213.183.51.172, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
+  - {name: 🇩🇪 德国-1.85MB/s(Youtube:不良林), server: 5.183.179.141, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇷🇺 (已存活1天)俄罗斯联邦-218.5KB/s(Youtube:不良林), server: 213.183.53.179, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇺🇸 美国-1.74MB/s(Youtube:不良林), server: 38.68.135.19, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇷🇺 俄罗斯联邦-246.5KB/s(Youtube:不良林), server: 213.183.53.202, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
   - {name: 🇺🇸 美国-3.00MB/s(Youtube:不良林), server: 169.197.142.39, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-3.24MB/s(Youtube:不良林), server: 169.197.142.39, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-3.19MB/s(Youtube:不良林), server: 169.197.142.39, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1020.9KB/s(Youtube:不良林)
-      - 🇷🇺 (已存活1天)俄罗斯联邦-810.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-579.4KB/s(Youtube:不良林)
-      - 波兰-1007.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-186.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.85MB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-218.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-246.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-1020.9KB/s(Youtube:不良林)
-      - 🇷🇺 (已存活1天)俄罗斯联邦-810.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-579.4KB/s(Youtube:不良林)
-      - 波兰-1007.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-186.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.85MB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-218.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-246.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1020.9KB/s(Youtube:不良林)
-      - 🇷🇺 (已存活1天)俄罗斯联邦-810.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-579.4KB/s(Youtube:不良林)
-      - 波兰-1007.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-186.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.85MB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-218.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-246.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-1020.9KB/s(Youtube:不良林)
-      - 🇷🇺 (已存活1天)俄罗斯联邦-810.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-579.4KB/s(Youtube:不良林)
-      - 波兰-1007.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-186.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.85MB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-218.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-246.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1020.9KB/s(Youtube:不良林)
-      - 🇷🇺 (已存活1天)俄罗斯联邦-810.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-579.4KB/s(Youtube:不良林)
-      - 波兰-1007.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-186.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.85MB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-218.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-246.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1020.9KB/s(Youtube:不良林)
-      - 🇷🇺 (已存活1天)俄罗斯联邦-810.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-579.4KB/s(Youtube:不良林)
-      - 波兰-1007.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-186.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.85MB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-218.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-246.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1020.9KB/s(Youtube:不良林)
-      - 🇷🇺 (已存活1天)俄罗斯联邦-810.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-579.4KB/s(Youtube:不良林)
-      - 波兰-1007.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-186.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.85MB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-218.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-246.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
