--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-1.62MB/s(Youtube:不良林), server: 213.183.51.172, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
-  - {name: 🇩🇪 德国-1.85MB/s(Youtube:不良林), server: 5.183.179.141, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇷🇺 (已存活1天)俄罗斯联邦-218.5KB/s(Youtube:不良林), server: 213.183.53.179, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇺🇸 美国-1.74MB/s(Youtube:不良林), server: 38.68.135.19, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇷🇺 俄罗斯联邦-246.5KB/s(Youtube:不良林), server: 213.183.53.202, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: 38.68.135.19, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林) 2, server: 38.68.134.71, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇳🇱 荷兰-164.9KB/s(Youtube:不良林), server: 213.183.59.218, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 🇳🇱 荷兰-374.1KB/s(Youtube:不良林), server: 213.183.59.229, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇷🇺 (已存活1天)俄罗斯联邦-810.3KB/s(Youtube:不良林), server: 213.183.53.207, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
+  - {name: 🇯🇵 日本-3.65MB/s(Youtube:不良林), server: jp02-vm0.entry.ikuuu.casa, port: 444, type: vmess, uuid: 4b5ac001-b451-38ac-9b96-64e52d8b9bb4, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: jp02-vm0.entry.ikuuu.casa}}
   - {name: 🇺🇸 美国-3.00MB/s(Youtube:不良林), server: 169.197.142.39, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-3.24MB/s(Youtube:不良林), server: 169.197.142.39, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-3.19MB/s(Youtube:不良林), server: 169.197.142.39, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-247.5KB/s(Youtube:不良林), server: 169.197.142.39, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-3.07MB/s(Youtube:不良林), server: 169.197.142.39, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-300.6KB/s(Youtube:不良林), server: 169.197.142.39, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.62MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.85MB/s(Youtube:不良林)
-      - 🇷🇺 (已存活1天)俄罗斯联邦-218.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-246.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-164.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-374.1KB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-810.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-247.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-1.62MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.85MB/s(Youtube:不良林)
-      - 🇷🇺 (已存活1天)俄罗斯联邦-218.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-246.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-164.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-374.1KB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-810.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-247.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.62MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.85MB/s(Youtube:不良林)
-      - 🇷🇺 (已存活1天)俄罗斯联邦-218.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-246.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-164.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-374.1KB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-810.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-247.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-1.62MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.85MB/s(Youtube:不良林)
-      - 🇷🇺 (已存活1天)俄罗斯联邦-218.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-246.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-164.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-374.1KB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-810.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-247.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.62MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.85MB/s(Youtube:不良林)
-      - 🇷🇺 (已存活1天)俄罗斯联邦-218.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-246.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-164.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-374.1KB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-810.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-247.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.62MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.85MB/s(Youtube:不良林)
-      - 🇷🇺 (已存活1天)俄罗斯联邦-218.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-246.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-164.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-374.1KB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-810.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-247.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.62MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.85MB/s(Youtube:不良林)
-      - 🇷🇺 (已存活1天)俄罗斯联邦-218.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-246.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林) 2
+      - 🇳🇱 荷兰-164.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-374.1KB/s(Youtube:不良林)
+      - 🇷🇺 (已存活1天)俄罗斯联邦-810.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-247.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
